Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-10226

Segmentation fault when using FakeVim and going back to command mode

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 3.0.0-rc1
    • Qt Creator 2.8.1
    • FakeVim
    • None
    • Arch Linux x64 - Gnome 3.8.4
    • a12a9f491cb31ff5c22f1051bb22ccfef6c65217 8e0597687cb178801f14d40d02a7b5bde77a78da

      FakeVim enabled and go to insert mode and when trying to go back to command-mode (typing ':') the UI-freezes and after a while it crashes with segmentation fault.

      The log is filled with following line

      SOFT ASSERT: "!m_inFakeVim" in file /build/qtcreator/src/qt-creator-2.8.1-src/src/plugins/fakevim/fakevimhandler.cpp, line 2033
      enterFakeVim() shouldn't be called recursively!
      

      I've attached stack-trace (not complete as it is over 30000 calls) and the recursive part is following:

      #35 0x00007ffff6630c85 in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
      No symbol table info available.
      #36 0x00007ffff74cdedc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
      No symbol table info available.
      #37 0x00007ffff74d2fe6 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
      No symbol table info available.
      #38 0x00007ffff6630a5d in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
      No symbol table info available.
      #39 0x00007fffec823ac9 in ?? () from /usr/lib/qt/plugins/platforminputcontexts/libibusplatforminputcontextplugin.so
      No symbol table info available.
      #40 0x00007ffff7503b17 in QWidget::setFocus(Qt::FocusReason) () from /usr/lib/libQt5Widgets.so.5
      No symbol table info available.
      #41 0x00007fffd5cb79e9 in ?? () from /usr/lib/qtcreator/plugins/QtProject/libFakeVim.so
      No symbol table info available.
      #42 0x00007fffd5cc2013 in ?? () from /usr/lib/qtcreator/plugins/QtProject/libFakeVim.so
      No symbol table info available.
      #43 0x00007ffff6656626 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
      No symbol table info available.
      #44 0x00007fffd5cc819b in ?? () from /usr/lib/qtcreator/plugins/QtProject/libFakeVim.so
      No symbol table info available.
      #45 0x00007fffd5c9260c in ?? () from /usr/lib/qtcreator/plugins/QtProject/libFakeVim.so
      No symbol table info available.
      #46 0x00007fffd5cac02f in ?? () from /usr/lib/qtcreator/plugins/QtProject/libFakeVim.so
      No symbol table info available.
      #47 0x00007fffd5ca9f16 in ?? () from /usr/lib/qtcreator/plugins/QtProject/libFakeVim.so
      No symbol table info available.
      #48 0x00007fffd5caa438 in ?? () from /usr/lib/qtcreator/plugins/QtProject/libFakeVim.so
      No symbol table info available.
      #49 0x00007fffd5caa6d6 in ?? () from /usr/lib/qtcreator/plugins/QtProject/libFakeVim.so
      No symbol table info available.
      #50 0x00007fffd5caf31e in ?? () from /usr/lib/qtcreator/plugins/QtProject/libFakeVim.so
      No symbol table info available.
      #51 0x00007ffff6630c85 in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
      No symbol table info available.
      #52 0x00007ffff74cdedc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
      No symbol table info available.
      #53 0x00007ffff74d2fe6 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
      No symbol table info available.
      #54 0x00007ffff6630a5d in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
      

      Note 1: I've had this problem earlier but after removing a bunch of configuration files and can't remember which ones it was solved but today the bug reappeared.

      Note 2: This only happens in gnome3, no crash in KDE.

        1. qtcreator_bt.txt
          7.75 MB
        2. stack-trace.txt
          22 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            henrik.antonsson Henrik Antonsson
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes