FakeVim: Ensure that enterFakeVim() is not called recursively

Task-number: QTCREATORBUG-10226
Change-Id: Ib58d43dc11071a5dc28bad53e13213a4413fca71
Reviewed-by: hjk <hjk121@nokiamail.com>